--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -7,7 +7,7 @@ on:
         description: 'Name of the application'
         required: true
         type: string
-      eenv:
+      env:
         description: 'Environment (e.g., dev, prod, staging)'
         required: true
         type: choice
